fixed ai notes